@@ -1340,7 +1340,8 @@ Unselected groups will not be changed. You can deselect a group with CTRL + Left
 'userrights-reason'           => 'Reason for change:',
 'userrights-available-none'   => 'You may not alter group membership.',
 'userrights-available-add'    => 'You can add users to {{PLURAL:$2|this group|these groups}}: $1.',
-'userrights-available-remove' => 'You can remove users from {{PLURAL:$2|this group|these groups}}: $1.',
+'userrights-available-add-self'    => 'You can add yourself to {{PLURAL:$2|this group|these groups}}: $1.',
+'userrights-available-remove-self' => 'You can remove yourself from {{PLURAL:$2|this group|these groups}}: $1.',
 'userrights-no-interwiki'     => 'You do not have permission to edit user rights on other wikis.',
 'userrights-nodatabase'       => 'Database $1 does not exist or is not local.',
 'userrights-nologin'          => 'You must [[Special:Userlogin|log in]] with an administrator account to assign user rights.',
